src/objects/Apttus_Billing__InvoiceLineItem__c/Apttus_Billing__InvoiceLineItem__c.object-meta.xml
<CustomObject>
    <description>Represents a single item in an invoice</description>
    <label>Invoice Line Item</label>
    <nameField>
        <displayFormat>II-{0000000000}</displayFormat>
        <label>Line Item Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Invoice Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>