src/objects/Apttus_Billing__InvoiceLineItem__c/fields/APTS_External_Id__c.field-meta.xml
<CustomField>
    <fullName>APTS_External_Id__c</fullName>
    <formula>Apttus_Billing__AssetLineItemId__r.APTS_External_Id__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>External Id</label>
    <type>Text</type>
</CustomField>