src/objects/Apttus_Billing__InvoiceLineItem__c/fields/APTS_Number_Increment__c.field-meta.xml
<CustomField>
    <fullName>APTS_Number_Increment__c</fullName>
    <description>This field is used to support the APTS_Sequence_Line_Number_Trigger__c to map key,value pair in before insert trigger</description>
    <label>APTS Number Increment</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>