src/objects/Apttus_Billing__InvoiceLineItem__c/fields/APTS_PO_Date__c.field-meta.xml
<CustomField>
    <fullName>APTS_PO_Date__c</fullName>
    <formula>Apttus_Billing__BillingScheduleId__r.Apttus_Billing__OrderLineItemId__r.Apttus_Config2__OrderId__r.Apttus_Config2__PODate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PO Date</label>
    <type>Date</type>
</CustomField>