src/objects/Apttus_Billing__InvoiceLineItem__c/fields/Apttus_Billing__Description__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Billing__Description__c</fullName>
    <description>The line description</description>
    <inlineHelpText>The line description</inlineHelpText>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>