src/objects/Apttus_Billing__InvoiceLineItem__c/fields/Apttus_Billing__EndDate__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Billing__EndDate__c</fullName>
    <description>The item end date</description>
    <inlineHelpText>The item end date</inlineHelpText>
    <label>End Date</label>
    <type>Date</type>
</CustomField>