src/objects/Apttus_Billing__InvoiceLineItem__c/fields/Apttus_Billing__Quantity__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Billing__Quantity__c</fullName>
    <description>The item quantity</description>
    <inlineHelpText>The item quantity</inlineHelpText>
    <label>Quantity</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>