src/objects/Apttus_Billing__InvoiceLineItem__c/fields/Apttus_Billing__ShipToAccountId__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Billing__ShipToAccountId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>ID of the ship to account</description>
    <inlineHelpText>ID of the ship to account</inlineHelpText>
    <label>Ship To</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Invoice Line Items (Ship To)</relationshipLabel>
    <relationshipName>InvoiceLineItemsShipTo</relationshipName>
    <type>Lookup</type>
</CustomField>