src/objects/Apttus_Billing__InvoiceLineItem__c/fields/Apttus_Billing__ShipToCountry__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Billing__ShipToCountry__c</fullName>
    <description>The ship to country</description>
    <inlineHelpText>The ship to country</inlineHelpText>
    <label>Ship To Country</label>
    <length>255</length>
    <type>Text</type>
</CustomField>