src/objects/Apttus_Billing__InvoiceLineItem__c/fields/Apttus_Billing__Subcategory__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Billing__Subcategory__c</fullName>
    <description>The subcategory associated with the item</description>
    <inlineHelpText>The subcategory associated with the item</inlineHelpText>
    <label>Subcategory</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Apttus_Billing__Category__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Partner Discount</fullName>
            </value>
            <value>
                <fullName>Channel Discount</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>