src/objects/Apttus_Billing__InvoiceLineItem__c/fields/Apttus_Billing__TaxAmount__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Billing__TaxAmount__c</fullName>
    <description>The aggregate amount of tax of the underlying Tax Break-ups.</description>
    <inlineHelpText>The aggregate amount of tax of the underlying Tax Break-ups</inlineHelpText>
    <label>Tax Amount</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Currency</type>
</CustomField>