src/objects/Apttus_Billing__InvoiceLineItem__c/fields/Apttus_Billing__TransferredToERP__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Billing__TransferredToERP__c</fullName>
    <description>Indicates whether the invoice item has been transferred to the ERP application</description>
    <inlineHelpText>Indicates whether the invoice item has been transferred to the ERP application</inlineHelpText>
    <label>Transferred To ERP ?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>NA</fullName>
                <default>true</default>
                <label>NA</label>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Processing</fullName>
            </value>
            <value>
                <fullName>Error</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>