src/objects/Apttus_Billing__InvoiceLineItem__c/fields/Integration_Sequence_Line_Number__c.field-meta.xml
<CustomField>
    <fullName>Integration_Sequence_Line_Number__c</fullName>
    <formula>Text(APTS_Sequence_Line_Number_Trigger__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sequence Line Number</label>
    <type>Text</type>
</CustomField>