src/objects/Apttus_Billing__InvoiceLineItem__c/fields/Is_License_Required_c__c.field-meta.xml
<CustomField>
    <fullName>Is_License_Required_c__c</fullName>
    <formula>IF(Apttus_Billing__BillingScheduleId__r.Apttus_Billing__OrderLineItemId__r.Apttus_Config2__OptionId__c != NULL, 

Apttus_Billing__BillingScheduleId__r.Apttus_Billing__OrderLineItemId__r.Apttus_Config2__OptionId__r.Is_License_Required__c,

Apttus_Billing__BillingScheduleId__r.Apttus_Billing__OrderLineItemId__r.Apttus_Config2__ProductId__r.Is_License_Required__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is_License_Required__c</label>
    <type>Checkbox</type>
</CustomField>