src/objects/Apttus_Billing__InvoiceLineItem__c/fields/Send_INV_To_SAP__c.field-meta.xml
<CustomField>
    <fullName>Send_INV_To_SAP__c</fullName>
    <formula>Apttus_Billing__BillingScheduleId__r.Send_INV_To_SAP__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Send INV To SAP</label>
    <type>Checkbox</type>
</CustomField>