src/objects/Apttus_Billing__InvoiceLineItem__c/fields/SoldTo_Number__c.field-meta.xml
<CustomField>
    <fullName>SoldTo_Number__c</fullName>
    <formula>TEXT(VALUE(IF
(Find(&quot;-&quot;, Apttus_Billing__BillingScheduleId__r.Apttus_Billing__OrderLineItemId__r.Apttus_Config2__OrderId__r.soldToNumber__c) &gt; 0, 
LEFT(Apttus_Billing__BillingScheduleId__r.Apttus_Billing__OrderLineItemId__r.Apttus_Config2__OrderId__r.soldToNumber__c, Find(&quot;-&quot;, Apttus_Billing__BillingScheduleId__r.Apttus_Billing__OrderLineItemId__r.Apttus_Config2__OrderId__r.soldToNumber__c)-1), 
Apttus_Billing__BillingScheduleId__r.Apttus_Billing__OrderLineItemId__r.Apttus_Config2__OrderId__r.soldToNumber__c)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SoldTo Number</label>
    <type>Text</type>
</CustomField>