src/objects/Apttus_Billing__InvoiceLineItem__c/fields/SoldToXref__c.field-meta.xml
<CustomField>
    <fullName>SoldToXref__c</fullName>
    <formula>Apttus_Billing__BillingScheduleId__r.Apttus_Billing__OrderLineItemId__r.Apttus_Config2__OrderId__r.SoldToXref__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SoldToXref</label>
    <type>Text</type>
</CustomField>